Adding image API
